--- a/sites/all/themes/slac/sass/pages/_news-archives.scss
+++ b/sites/all/themes/slac/sass/pages/_news-archives.scss
@@ -3,6 +3,7 @@
     float: none;
     padding-top: 0;
   }
+
   .general-left {
 
     .views-row {
@@ -55,7 +56,7 @@
     }
 
     select {
-      width: 126px;
+      width: 150px;
       @include clearfix;
       float: none !important;
       margin-bottom: 1rem;
@@ -63,7 +64,7 @@
 
     input[type="submit"].form-submit {
       margin-top: 0;
-      width: 126px;
+      width: 150px;
     }
   }
 }
